--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    tools:viewBindingIgnore="true"
     tools:context=".SignUpActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
