--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -21,7 +21,7 @@
             android:layout_height="160dp"
             android:scaleType="centerCrop"
             android:layout_alignParentTop="true"
-            android:background="@color/green_700"
+            android:src="@drawable/no_profile_background"
             app:shapeAppearanceOverlay="@style/roundedCorners" />
 
         <ImageButton
@@ -44,7 +44,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="80dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_user_profile"
+            android:src="@drawable/ic_default_profile"
             app:civ_border_color="@color/white"
             app:civ_border_width="10dp"/>
 
@@ -103,7 +103,7 @@
                     app:layout_constraintTop_toBottomOf="@id/nameEdit_editText" />
 
                 <EditText
-                    android:id="@+id/bio_editText"
+                    android:id="@+id/bioEdit_editText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
