--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -114,7 +114,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
                     android:ems="16"
-                    android:hint="Enter Birthday"
+                    android:hint="Enter Birthday (DD/MM/YYYY)"
                     android:inputType="date"
                     android:textColor="@color/white"
                     android:textColorHint="@color/lightBlue_FB"
