--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,9 @@
     <color name="lightBlue_FB">#8B9DC3</color>
     <color name="blue_FB">#3B5998</color>
     <color name="green_700">#388E3C</color>
+    <color name="gray_1">#2B2B2B</color>
+    <color name="gray_2">#3C3F41</color>
+    <color name="gray_3">#898A8D</color>
 
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
