--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -5,12 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:viewBindingIgnore="true"
-    tools:context=".PasswordResetActivity">
+    tools:context=".PasswordResetActivity"
+    android:background="@color/gray_1">
 
     <EditText
         android:id="@+id/pwdResetEmail_editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColorHint="@color/gray_3"
+        android:textColor="@color/white"
         android:ems="10"
         android:inputType="textEmailAddress"
         android:hint="Email"
