Added menu in Toolbar and Dev Contact Activity

--- a/app/src/main/res/layout/fragment_user_posts.xml
+++ b/app/src/main/res/layout/fragment_user_posts.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".UserPostsFragment">
 
-    <GridLayout
-        android:id="@+id/posts_gridLayout"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:rowCount="3"/>
+        android:layout_height="wrap_content"
+        android:text="User's Posts"
+        android:textSize="32sp"/>
 
 </FrameLayout>
