--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,4 +28,9 @@
         <item name="cornerSizeTopRight">20dp</item>
     </style>
 
+    <style name="dev_details">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/green_700</item>
+        <item name="android:clickable">true</item>
+    </style>
 </resources>
