--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,7 +16,7 @@
             android:id="@+id/userProfile_toolbar"
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            android:background="@color/white"
+            android:background="@color/gray_1"
             android:elevation="10dp">
 
             <LinearLayout
@@ -27,21 +27,15 @@
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp">
 
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_add_square"
-                    android:scaleType="fitCenter"
-                    android:clickable="true"/>
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="FingerTrip"
                     android:layout_marginLeft="16dp"
-                    android:textSize="32sp"
-                    android:textColor="@color/black"
-                    android:fontFamily="@font/oleoscriptswashcaps_regular"/>
+                    android:textSize="26sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/sacramento_regular"/>
 
                 <View
                     android:layout_width="0dp"
