--- a/app/src/main/res/layout/post_layout.xml
+++ b/app/src/main/res/layout/post_layout.xml
@@ -104,84 +104,79 @@
                 android:id="@+id/postOp_relativeLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/post_imageView"
-                android:padding="8dp">
+                app:layout_constraintTop_toBottomOf="@id/post_imageView">
 
                 <LinearLayout
                     android:id="@+id/like_linearLayout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/like_imageView"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
-                        android:src="@drawable/ic_like"/>
+                        android:src="@drawable/ic_like" />
+
                     <TextView
                         android:id="@+id/like_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
-                        android:textSize="10sp"
+                        android:textAlignment="center"
                         android:textColor="@color/gray_3"
-                        android:textAlignment="center"/>
+                        android:textSize="10sp" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_toRightOf="@id/like_linearLayout"
-                    android:layout_marginLeft="16dp"
-                    android:gravity="center">
+                    android:layout_alignParentRight="true"
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/comment_imageView"
                         android:layout_width="22dp"
                         android:layout_height="22dp"
                         android:src="@drawable/ic_comment" />
+
                     <TextView
                         android:id="@+id/comment_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
-                        android:textSize="10sp"
+                        android:textAlignment="center"
                         android:textColor="@color/gray_3"
-                        android:textAlignment="center" />
+                        android:textSize="10sp" />
                 </LinearLayout>
 
-
-                <ImageView
-                    android:id="@+id/share_imageView"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:src="@drawable/ic_share"
-                    android:layout_alignParentRight="true"/>
 
                 <TextView
                     android:id="@+id/postTitle_textView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_below="@id/like_linearLayout"
+                    android:layout_marginTop="8dp"
                     android:text="Post Title"
                     android:textColor="@color/white"
-                    android:textStyle="bold"
                     android:textSize="14sp"
-                    android:layout_below="@id/like_linearLayout"
-                    android:layout_marginTop="8dp"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/postDesc_textView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Lorem Ipsum soren Lorem Ipsum soren Lorem Ipsum soren Lorem Ipsum soren Lorem Ipsum soren Lorem Ipsum soren Lorem Ipsum soren Lorem Ipsum soren"
-                    android:textColor="@color/white"
                     android:layout_below="@id/postTitle_textView"
-                    android:layout_marginTop="8dp"/>
+                    android:layout_marginTop="8dp"
+                    android:text="Lorem Ipsum soren Lorem Ipsum soren Lorem Ipsum soren Lorem Ipsum soren Lorem Ipsum soren Lorem Ipsum soren Lorem Ipsum soren Lorem Ipsum soren"
+                    android:textColor="@color/white" />
 
             </RelativeLayout>
 
