--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -123,6 +123,16 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp" />
 
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@+id/postPhoto_imageView"
+                app:layout_constraintEnd_toEndOf="@+id/postPhoto_imageView"
+                app:layout_constraintStart_toStartOf="@+id/postPhoto_imageView"
+                app:layout_constraintTop_toBottomOf="@+id/post_relativeLayout" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
