--- a/app/src/main/res/layout/fragment_create_post.xml
+++ b/app/src/main/res/layout/fragment_create_post.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CreatePostActivity"
+    tools:context=".CreatePostFragment"
     android:background="@color/gray_1"
     android:padding="16dp">
 
@@ -86,12 +86,15 @@
                     android:id="@+id/uploadPhoto_button"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:padding="0dp"
                     android:layout_alignParentLeft="true"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
                     android:backgroundTint="@color/gray_2"
+                    android:padding="0dp"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/upload_image"
-                    android:layout_margin="16dp"/>
+                    android:src="@drawable/upload_image" />
                 <!--                        android:layout_marginRight="8dp"-->
 
 
@@ -139,10 +142,10 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/createPost_cardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginBottom="24dp"
+        android:layout_marginTop="24dp"
         android:orientation="horizontal">
 
         <Button
@@ -162,8 +165,6 @@
             android:backgroundTint="@color/green_700"
             android:text="Create Post"
             android:textColor="@color/white"/>
-
-
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
