--- a/app/src/main/res/layout/fragment_user_posts.xml
+++ b/app/src/main/res/layout/fragment_user_posts.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".UserPostsFragment">
-
-    <TextView
+    android:layout_height="wrap_content">
+    <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="User's Posts"
-        android:textSize="32sp"/>
-
-</FrameLayout>
+        android:layout_height="wrap_content"/>
+</ScrollView>
