--- a/app/src/main/res/layout/fragment_user_posts.xml
+++ b/app/src/main/res/layout/fragment_user_posts.xml
@@ -5,7 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <GridLayout
+
+    <GridView
+        android:id="@+id/posts_gridView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:numColumns="2"
+        android:stretchMode="columnWidth"/>
 </ScrollView>
