--- a/app/src/main/res/layout/posts_user_profile_layout.xml
+++ b/app/src/main/res/layout/posts_user_profile_layout.xml
@@ -5,12 +5,17 @@
     android:layout_height="wrap_content">
 
     <ImageView
+        android:id="@+id/postImage"
         android:layout_width="wrap_content"
-        android:layout_height="300dp"
-        android:scaleType="centerInside"
+        android:layout_height="200dp"
+        android:clickable="true"
+        android:contentDescription="PostImage"
+        android:layout_marginBottom="8dp"
+        android:scaleType="centerCrop"
         android:src="@drawable/default_post_image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
