--- a/app/src/main/res/layout/posts_user_profile_layout.xml
+++ b/app/src/main/res/layout/posts_user_profile_layout.xml
@@ -2,15 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="4dp">
 
     <ImageView
         android:id="@+id/postImage"
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
         android:clickable="true"
         android:contentDescription="PostImage"
-        android:layout_marginBottom="8dp"
         android:scaleType="centerCrop"
         android:src="@drawable/default_post_image"
         app:layout_constraintBottom_toBottomOf="parent"
